Resolves: tdf#93127 copying cells does not modify named expressions

Change-Id: Ic3d0b0a709ecfeade4b3a9c4be9e0c9cfd766103
(cherry picked from commit 7d267d3b168ba3b13763733e8c319a79d990773a)
Reviewed-on: https://gerrit.libreoffice.org/23409
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>